@@ -89,7 +89,7 @@ FuzzyPointLocator::getLineWork(const geom::Geometry& geom)
 }
 
 /* public */
-int
+Location::Value
 FuzzyPointLocator::getLocation(const Coordinate& pt)
 {
 	auto_ptr<Geometry> point(g.getFactory()->createPoint(pt));
@@ -103,7 +103,10 @@ FuzzyPointLocator::getLocation(const Coordinate& pt)
 
 	// now we know point must be clearly inside or outside geometry,
 	// so return actual location value
-	return ptLocator.locate(pt, &g);
+
+	// (the static_cast is needed because PointLocator doesn't cleanly
+	// return a Location::Value - it should !!)
+	return static_cast<Location::Value>(ptLocator.locate(pt, &g));
 }
 
 } // namespace geos.operation.overlay
