@@ -6,15 +6,18 @@ INCLUDES = -I$(top_srcdir)/source/headers
 
 libopoverlay_la_SOURCES = \
 	EdgeSetNoder.cpp \
+	ElevationMatrixCell.cpp \
+	ElevationMatrix.cpp \
+	FuzzyPointLocator.cpp \
 	LineBuilder.cpp \
 	MaximalEdgeRing.cpp \
 	MinimalEdgeRing.cpp \
+	OffsetPointGenerator.cpp \
 	OverlayNodeFactory.cpp \
 	OverlayOp.cpp \
+	OverlayResultValidator.cpp \
 	PointBuilder.cpp \
-	PolygonBuilder.cpp \
-	ElevationMatrix.cpp \
-	ElevationMatrixCell.cpp 
+	PolygonBuilder.cpp 
 
 libopoverlay_la_LIBADD = 
 
