@@ -1,3 +1,15 @@
+2006-09-06 Sandro Santilli <strk@refractions.net>
+
+	* source/operation/overlay/FuzzyPointLocator.cpp,
+	  source/operation/overlay/OverlayResultValidator.cpp,
+	  source/operation/overlay/OffsetPointGenerator.cpp,
+	  source/operation/overlay/Makefile.am,
+	  source/headers/geos/operation/overlay/OffsetPointGenerator.h,
+	  source/headers/geos/operation/overlay/Makefile.am,
+	  source/headers/geos/operation/overlay/FuzzyPointLocator.h,
+	  source/headers/geos/operation/overlay/OverlayResultValidator.h:
+	  Rest of Overlay validation classes.
+
 2006-09-06 Mateusz Loskot <mateusz@loskot.net>
 
 	* All files of following types: .c .cpp .h .i .in .inl
